--- a/charts/argo-cd/Chart.yaml
+++ b/charts/argo-cd/Chart.yaml
@@ -23,6 +23,8 @@ dependencies:
 annotations:
   artifacthub.io/changes: |
     - "[Fixed]: Automount tokens for notification controller"
+    - "[Fixed]: Redis resources are not created when redis-ha is enabled"
+    - "[Added]: Missing labels, annotations, pod distrubtion budgets, topology contrainsts"
     - "[Changed]: Configuration sections have been refactored and unified"
     - "[Changed]: Aligned deployments for notification and applicationset controller with upstream"
     - "[Removed]: Deprecated configuration options"
