Align rbac clusterroles with upstream
Signed-off-by: Petr Drastil <petr.drastil@gmail.com>

--- a/charts/argo-cd/Chart.yaml
+++ b/charts/argo-cd/Chart.yaml
@@ -24,6 +24,7 @@ annotations:
   artifacthub.io/changes: |
     - "[Fixed]: Automount tokens for notification controller"
     - "[Fixed]: Redis resources are not created when redis-ha is enabled"
+    - "[Fixed]: Cluster-wide installation now properly watches Argo CD resources in other namespaces"
     - "[Added]: Missing labels, annotations, pod distrubtion budgets, topology contrainsts"
     - "[Changed]: Configuration sections have been refactored and unified"
     - "[Changed]: Aligned deployments for notification and applicationset controller with upstream"
