--- a/charts/argo-cd/templates/argocd-repo-server/serviceaccount.yaml
+++ b/charts/argo-cd/templates/argocd-repo-server/serviceaccount.yaml
@@ -3,13 +3,13 @@ apiVersion: v1
 kind: ServiceAccount
 automountServiceAccountToken: {{ .Values.repoServer.serviceAccount.automountServiceAccountToken }}
 metadata:
-  name: {{ template "argo-cd.repoServerServiceAccountName" . }}
-{{- if .Values.repoServer.serviceAccount.annotations }}
-  annotations:
-  {{- range $key, $value := .Values.repoServer.serviceAccount.annotations }}
-    {{ $key }}: {{ $value | quote }}
-  {{- end }}
-{{- end }}
+  name: {{ template "argo-cd.repoServer.serviceAccountName" . }}
   labels:
     {{- include "argo-cd.labels" (dict "context" . "component" .Values.repoServer.name "name" .Values.repoServer.name) | nindent 4 }}
+  {{- with .Values.repoServer.serviceAccount.annotations }}
+  annotations:
+    {{- range $key, $value := . }}
+    {{ $key }}: {{ $value | quote }}
+    {{- end }}
+  {{- end }}
 {{- end }}
