--- a/charts/argo-cd/templates/argocd-server/gke-backendconfig.yaml
+++ b/charts/argo-cd/templates/argocd-server/gke-backendconfig.yaml
@@ -1,10 +1,10 @@
-{{- if .Values.server.GKEbackendConfig.enabled }}
+{{- if .Values.server.gke.backendConfig.enabled }}
 apiVersion: cloud.google.com/v1beta1
 kind: BackendConfig
 metadata:
-  name: {{ template "argo-cd.server.fullname" . }}
+  name: {{ include "argo-cd.server.fullname" . }}
   labels:
     {{- include "argo-cd.labels" (dict "context" . "component" .Values.server.name "name" .Values.server.name) | nindent 4 }}
 spec:
-  {{- toYaml .Values.server.GKEbackendConfig.spec | nindent 2 }}
+  {{- toYaml .Values.server.gke.backendConfig.spec | nindent 2 }}
 {{- end }}
