--- a/charts/argo-cd/templates/argocd-notifications/service-metrics.yaml
+++ b/charts/argo-cd/templates/argocd-notifications/service-metrics.yaml
@@ -20,6 +20,6 @@ spec:
   ports:
   - name: {{ .Values.notifications.metrics.service.portName }}
     protocol: TCP
-    port: {{ .Values.notifications.metrics.service.servicePort }}
+    port: {{ .Values.notifications.metrics.service.port }}
     targetPort: metrics
 {{- end }}
