--- a/charts/argo-cd/templates/redis/service-metrics.yaml
+++ b/charts/argo-cd/templates/redis/service-metrics.yaml
@@ -5,7 +5,7 @@ kind: Service
 metadata:
   name: {{ include "argo-cd.redis.fullname" . }}-metrics
   labels:
-    {{- include "argo-cd.labels" (dict "context" . "component" .Values.redis.name "name" .Values.redis.name) | nindent 4 }}
+    {{- include "argo-cd.labels" (dict "context" . "component" .Values.redis.name "name" "metrics") | nindent 4 }}
     {{- with .Values.redis.metrics.service.labels }}
       {{- toYaml . | nindent 4 }}
     {{- end }}
@@ -23,7 +23,7 @@ spec:
   ports:
     - name: {{ .Values.redis.metrics.service.portName }}
       protocol: TCP
-      port: {{ .Values.redis.metrics.service.servicePort }}
+      port: {{ .Values.redis.metrics.service.port }}
       targetPort: metrics
   selector:
     {{- include "argo-cd.selectorLabels" (dict "context" . "component" .Values.redis.name "name" .Values.redis.name) | nindent 4 }}
